--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
-	"InputPath" : "/mnt/e/goddessSort/Output/Run",
+	"InputPath" : "/mnt/e/goddessSort/Output/",
+	"InputFilePrefix": "Run",
 	"ICCutPath" : "/mnt/e/Analysis/Analysis Code/Cuts/ICCuts/",
 	"ICCutPrefix" : "Pcut_P30dp",
 	"OutputPath" : "/mnt/d/Nuclear Phy/GoddessAnalysis/Output/",
 	"OutputFilePrefix" : "Goddess30P",
-	"Runs":["0048","0049","0050","0078","0079","0081","0083","0084","0088","0089",
-			"0102","0103","0104","0105"],
+	"Runs":["0048","0049","0050","0078"],
 	"BeamMass" : 29.97,
 	"TargetMass" : 2.014,
 	"EjectileMass" : 1.0072,
